# Europe_Model_MacOs

./: .gitignore  CMakeLists.txt  README.md  Routine.sh  download.sh
pythonCode/: read_hgt.py
shell_scripts/: download.sh  unzip.sh
src/: HeightMap.cpp  load.cpp  main.cpp
